--- a/project.config
+++ b/project.config
@@ -4,6 +4,12 @@
 	action = merge always
 	mergeContent = true
 [project]
-	state = active
 [access]
 	inheritFrom = Platform-Unrestricted-Projects
+[access "refs/heads/*"]
+	exclusiveGroupPermissions = label-Code-Review
+	label-Code-Review = -2..+2 group Administrators
+	label-Code-Review = -2..+2 group approvers-telephony
+	label-Code-Review = -1..+1 group Registered Users
+	label-Verified = -1..+1 group approvers-telephony
+	submit = group approvers-telephony
